--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.0",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -22,17 +23,22 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/postcss": "^4.1.10",
+    "@tanstack/react-query": "^5.80.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "hono": "4.6.3",
     "lucide-react": "^0.515.0",
     "next": "14.2.14",
     "next-themes": "^0.4.6",
+    "node-appwrite": "17.0.0",
     "react": "^18",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.58.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
+    "server-only": "^0.0.1",
     "shadcn": "^2.6.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
