--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -22,24 +23,29 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/postcss": "^4.1.10",
     "@tanstack/react-query": "^5.80.7",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dropdown-menu": "^0.1.1",
     "hono": "4.6.3",
-    "lucide-react": "^0.515.0",
+    "lucide-react": "^0.519.0",
     "next": "14.2.14",
     "next-themes": "^0.4.6",
     "node-appwrite": "17.0.0",
+    "nuqs": "1.19.1",
     "react": "^18",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.58.0",
     "react-icons": "^5.5.0",
+    "react-use": "^17.6.0",
     "recharts": "^2.15.3",
     "server-only": "^0.0.1",
-    "shadcn": "^2.6.3",
+    "shadcn": "^2.7.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
@@ -47,13 +53,13 @@
     "zod": "^3.25.64"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
     "postcss": "^8",
     "tailwindcss": "^4.1.10",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "typescript": "^5"
   }
 }
